# private_messages

./: .db  .env  .envrc  .gitignore  .terraform.lock.hcl  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  build.rs  docker-compose.yaml  openapi.yaml  terraform.tf
.nix/: flake.nix
.sqlx/: query-0867da28daafd17acc4b5f4e467e1647bd07f92b9bf72b487aef01f9bcea4014.json  query-0d949ba7c48c028b1cc31b2e2c25199e4a324d9adc9e65f9e910709aa200a02f.json  query-0fc47020316fdb2374532df656fe683f29002279ee8cf589618c99c0e01172c6.json  query-17b2c1de77a222310f929ee881dd942082d34e0c4fbd294ffee421fd2fd302da.json  query-17fca715090df25198b7b9c9343ad402df054dbba4ddd5d25d6ec73f05601391.json  query-1a14b55e52c5b2144f49f986547635655b20fd76c6253641fb19961383d53025.json  query-25236b424bc528d5f938fc9dbe9452d5cbe71e100cd1567a6bae51a0c94b8a21.json  query-2891c0a44bf5573e0b1c35274b5de892ee02946ea8c1fd1e4e564bbe32a92a60.json  query-2d19b783817cde49cf2e9fe805fb14c9610138998d706d741767021978fee577.json  query-36705d450c95965e4b1c22b51d0aff84e7e26e721783c2f36c249202f48b362d.json  query-38f57aef0512954c7b1330147c78226bff0030ce8f26520a75fb95e0dca08d11.json  query-39352a817caf455a4aadda0b70de1b3e8d9dc71e689982999400cc280973bb9d.json  query-3a908330a231d87f537acb9ba9976aa83dfd439dec879dce45cc7d14d631028c.json  query-3d2f1a00dd18d792bf5c17f4703d1edaabb6b99102bb9e7dc2710e79fa0495a0.json  query-3ec2833e2f7e16d5d72b366078bb7314032e3ffa417547761e34bc15a1f08783.json  query-4081780b74a8748e58693f2270c39c3bdad8d1f5af823dc90179b7955dab8f7f.json  query-419b4b73c7299078b1703ba5a9d2fea029be719b0d806db5dec1a02e3c40a9ba.json  query-437d61aac6e838777003d0643fed0080c2ff78afcc2f655f04a33d21a7f4e130.json  query-4887459d07b8561022d635d005e600e913172414fc470a1b3d55a3b640f5b790.json  query-4c9e44b6582bc070d22177dad8ac2429ddc6e7d68dae76f4047b9d948852870d.json  query-531365ff2a625cd8632d2a898714291b75bfae712a19982a713835380ef6f969.json  query-553a652cc3af356da2ad770f4525d9900a0dc82e7a48357b60e7c2690b7c29c4.json  (+32 more)
client/: module-federation.config.ts  package-lock.json  (+1 more)
(+61 files in other folders)
