[package]
name = "ds-prototype"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"

[dependencies]
actix-files = "0.6.8"
actix-web = "4.11.0"
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
gcloud-pubsub = "1.5.1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.48.0", features = ["full"] }
