[package]
name = "ds-prototype"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"

[dependencies]
actix-files = "0.6.8"
actix-identity = "0.9.0"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.11.0"
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
gcloud-pubsub = "1.5.1"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.cookie]
version = "0.16"
features = ["secure", "percent-encode"]
