[package]
name = "ds-prototype"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "symbols"

[dependencies]
actix-files = "0.6.8"
actix-identity = "0.9.0"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web = "4.11.0"
anyhow = "1.0.100"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.5.51", features = ["derive", "string"] }
env_logger = "0.11.8"
gcloud-gax = "1.3.1"
gcloud-pubsub = "1.5.1"
log = "0.4.28"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[dependencies.cookie]
version = "0.16"
features = ["secure", "percent-encode"]
